# AutomatedDatabaseTuning

./: .editorconfig  .env.example  .gitignore  README.md
.github/workflows/: ci-python.yml  ci-react.yml  ci-sql-lint.yml
dashboard/dashboard/web/src/: App.jsx
dashboard/web/: README.md  index.html  package-lock.json  package.json
docs/: DECISIONS.md  DEMO_SCRIPT.md  ROADMAP.md  SYSTEM_DIAGRAM_2.md  system_diagram.md
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile.collector  Dockerfile.recommender
services/autorunner/: .env.example  README_poc_runner.md  autotuner_poc_runner.py  db_config.py
services/collector/: README.md  pyproject.toml
services/collector/src/collector/: main.py
services/recommender/: README.md  pyproject.toml
services/recommender/src/recommender/: main.py
sql/databases/demo/schema/: 01_schema.sql
sql/databases/demo/workloads/: write_heavy.sql
sql/databases/wwi/setup/: README_demo_reset_scripts.md  poc_cleanup_restore_demo.sql  poc_prepare_demo_baseline.sql  poc_prepare_orderlines_demo.sql  poc_restore_orderlines_demo.sql
sql/demo/seed/: seed.sql
sql/demo/workloads/: read_heavy.sql
sql/setup/: enable_query_store.sql
sql/shared/setup/: poc_baseline_capture.sql  poc_compare_runs.sql  poc_generate_index_candidates.sql
sql/workloads/: wwi_read_heavy.sql  wwi_write_heavy.sql
sql/wwi/schema/: create_index_example.sql
sql/wwi/setup/: inspect_indexes.sql  poc_baseline_capture.sql  poc_compare_runs.sql  poc_generate_index_candidates.sql
sql/wwi/workloads/: run_workload.sql
(+2 files in other folders)
